# src/vendors/oasisscan/apis/OperationsListApi.ts
@@ -2,7 +2,7 @@
 /* eslint-disable */
 /**
  * Oasisscan API
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ * https://github.com/bitcat365/oasisscan-backend#readme
  *
  * The version of the OpenAPI document: 1
  * 
@@ -23,7 +23,10 @@ import {
 export interface GetTransactionsListRequest {
     runtime: boolean;
     size?: number;
+    page?: number;
+    height?: number;
     address?: string;
+    method?: string;
 }
 
 /**
@@ -44,8 +47,20 @@ export class OperationsListApi extends runtime.BaseAPI {
             queryParameters['size'] = requestParameters.size;
         }
 
+        if (requestParameters.page !== undefined) {
+            queryParameters['page'] = requestParameters.page;
+        }
+
+        if (requestParameters.height !== undefined) {
+            queryParameters['height'] = requestParameters.height;
+        }
+
         if (requestParameters.address !== undefined) {
             queryParameters['address'] = requestParameters.address;
+        }
+
+        if (requestParameters.method !== undefined) {
+            queryParameters['method'] = requestParameters.method;
         }
 
         if (requestParameters.runtime !== undefined) {
